src/objects/Opportunity_Plan__c.object
<CustomObject>
    <description>Sales opportunity planning document</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Jenni, Bob, or the Sales Directors to mark when they have audited and approve this plan is complete</description>
        <inlineHelpText>Jenni, Bob, or the Sales Directors to mark when they have audited and approve this plan is complete</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_all_Action_Plans_created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tasks that identify each of the action plans for this account. Identify WHO, What, When and How for each one. T</description>
        <inlineHelpText>Tasks that identify each of the action plans for this account. Identify WHO, What, When and How for each one. The task should have a specific plan focus and a clear end date. The title of the Task must include Action Plan in the subject line.</inlineHelpText>
        <label>Are all Action Plans created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_all_relevant_contacts_added__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Make sure all relevant contacts are added to the Account with their applicable roles.  If available, complete the &quot;Reports to&quot; field on each account to create the org chart for this agency.</inlineHelpText>
        <label>Are all relevant contact roles added?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Issues__c</fullName>
        <formula>Opportunity__r.Business_Issues_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Issues</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Objectives__c</fullName>
        <label>Business Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_1_Positioning__c</fullName>
        <label>Competitor 1 Positioning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_1__c</fullName>
        <label>Competitor 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_2_Positioning__c</fullName>
        <label>Competitor 2 Positioning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_2__c</fullName>
        <label>Competitor 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_3_Positioning__c</fullName>
        <label>Competitor 3 Positioning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_3__c</fullName>
        <label>Competitor 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaps__c</fullName>
        <label>Gaps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_you_added_the_Project_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The project Sponsor is the person who owns the opportunity at the organization.</description>
        <inlineHelpText>The project Sponsor is the person who owns the opportunity at the organization.</inlineHelpText>
        <label>Have you added the Project Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_can_we_leverage_TriTech_s_strengths__c</fullName>
        <label>How can we leverage TriTech&apos;s strengths?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_when__c</fullName>
        <label>If yes, when?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Next_Steps_Synopsis_up_to_date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make sure that Next Steps/Synopsis is up to date with what the major next step in the opportunity process is.</description>
        <inlineHelpText>Make sure that Next Steps/Synopsis is up to date with what the major next step in the opportunity process is.</inlineHelpText>
        <label>Is Next Steps/Synopsis up to date?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_Decision_Date__c</fullName>
        <label>Is there a Decision Date?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_an_Executive_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The opportunity needs to have an Executive Summary that summarizes what the opportunity is/why we are going after this.</description>
        <inlineHelpText>The opportunity needs to have an Executive Summary that summarizes what the opportunity is/why we are going after this.</inlineHelpText>
        <label>Is there an Executive Summary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Term_Goals__c</fullName>
        <label>Long Term Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Synopsis__c</fullName>
        <formula>Opportunity__r.NextStep</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Steps/Synopsis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Plans</relationshipLabel>
        <relationshipName>Opportunity_Plans</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planning_to_replace_911_provider__c</fullName>
        <formula>TEXT( Account__r.Planning_to_replace_911_provider__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning to replace 911 provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_to_replace_CAD_provider__c</fullName>
        <formula>TEXT(Account__r.Planning_to_replace_CAD_provider__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning to replace CAD provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_to_replace_Jail_provider__c</fullName>
        <formula>TEXT( Account__r.Planning_to_replace_Jail_provider__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning to replace Jail provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_to_replace_RMS_provider__c</fullName>
        <formula>TEXT( Account__r.Planning_to_replace_RMS_provider__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planning to replace RMS provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Plans__c</fullName>
        <formula>Opportunity__r.Procurement_Plans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procurement Plans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Vehicle__c</fullName>
        <label>Procurement Vehicle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <formula>Opportunity__r.Project_Sponsor__r.FirstName&amp;&quot; &quot;&amp; Opportunity__r.Project_Sponsor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Objectives__c</fullName>
        <label>Relationship Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Selection_Committee_formalized__c</fullName>
        <label>Selection Committee formalized?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Term_Goals__c</fullName>
        <label>Short Term Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Threat__c</fullName>
        <label>Threat</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Add__c</fullName>
        <label>Value Add</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weakness__c</fullName>
        <label>Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_consultant_be_used__c</fullName>
        <label>Will consultant be used?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_there_be_an_RFP__c</fullName>
        <label>Will there be an RFP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Opp Plan-{000000}</displayFormat>
        <label>Opportunity Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>